TST-846 — BUG 4267: Fix "party" section on mobile menu

--- a/assets/scss/custom/layout/_nav-pages.scss
+++ b/assets/scss/custom/layout/_nav-pages.scss
@@ -491,9 +491,6 @@
 /* iPhone-specific media queries to deal with webkit's scroll issue on the mobile menu */
 @supports (-webkit-touch-callout: none) {
     @media only screen and (max-width:800px) {
-        .navPages-item-shop + .navPages-item-shop {
-            margin-left: 100px;
-        }
         .navPages-container {
             overflow-y:scroll;
             -webkit-overflow-scrolling:auto;
@@ -546,9 +543,10 @@
     #party-icon-mobile {
         top: 12px;
         position: relative;
+        padding-left: 20px;
     }
     #find-party-mobile-text {
-        width: 70%;
+        width: 60%;
     }
     #my-consultant-desktop {
         display: none;
@@ -627,5 +625,10 @@
     .host-name {
         font-size: 14px !important;
         height: 17px !important;
+    }
+    .consultant-info-control {
+        button {
+            padding: 0;
+        }
     }
 }
